galaxy version 1.0