@@ -9,13 +9,41 @@ package galaxy.executor;
 import galaxy.store.job.Job;
 import java.lang.ProcessBuilder;
 import java.lang.Process;
+import java.lang.Thread;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
 
 public class Executor {
     public Job job;
     public Process process;
+    public String cmd;
+    public BufferedReader reader;
+    public boolean exitFlag = false;        // True means process has been completed
 
     public void executor () throws Exception {
-        // String cmd = "yarn jar /home/galaxy/galaxy.jar " + job.clientPath;
-        // process = Runtime.getRuntime().exec(cmd);
+        ProcessBuilder processBuilder = new ProcessBuilder();
+        processBuilder.command(cmd.split("\\s+"));
+        process = processBuilder.start();
+        reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        Thread.currentThread().sleep(100);
+    }
+
+    public void readExecutor () throws Exception {
+        String line;
+        String[] words;
+        while ((line = reader.readLine()) != null) {
+            if (line.indexOf("Submitting application") != -1) {     // catch app ID
+                words = line.split(" ");
+                job.jobId = words[2];
+            }
+            if (line.indexOf("Client runtime") != -1) {
+                words = line.split(" ");
+                job.completeTime = words[2];
+            }
+            if (line.indexOf("finished with state FINISHED") != -1) {
+                job.status = "finished";
+                exitFlag = true;
+            }
+        }
     }
 }
